Revert "further sizing and alignment corrections on projects page"
This reverts commit a90e38646aa84a4141c5aafd64a493b9aa2b66ba.

--- a/portfolio/src/components/projects/index.css
+++ b/portfolio/src/components/projects/index.css
@@ -19,10 +19,6 @@
     font-size: 32px !important;
 }
 
-.projects p {
-    width: 85%;
-}
-
 .project-2 p {
     text-align: left;
 }
@@ -48,9 +44,9 @@
 
 .project-image-container,
 .project-image-container-mid {
-    background: #000;
+    background: #FFF;
     border-radius: 10px;
-    opacity: 0.3;
+    opacity: 0.4;
     transition: opacity 1s;
 }
 
@@ -59,17 +55,10 @@
     opacity: 1;
 }
 
-.project-image-div {
-    height: 100%;
-    width: 50%;
-    display: flex;
-    align-items: center;
-}
-
 .project-image-container,
 .project-image-container-mid {
     height: 100%;
-    width: 100%;
+    width: 50%;
 }
 
 .project-image {
@@ -78,8 +67,8 @@
 }
 
 .project-info {
-    height: 375px;
-    width: 50%;
+    height: 100%;
+    width: 45%;
     display: flex; 
     flex-direction: column;
     justify-content: space-around;
